...
                                <font key="font" metaFont="system"/>
                                <tabViewItems>
                                    <tabViewItem label="Main" identifier="io.sentry.ios-swift.ui-test.tabs.main" id="ETM-Eq-Bwl">
                                        <view key="view" id="IH5-bs-p81">
                                            <rect key="frame" x="10" y="33" width="597" height="780"/>
...
                                                                <font key="font" metaFont="system"/>
                                                            </buttonCell>
                                                            <accessibility identifier="io.sentry.ios-swift.ui-test.button.stop-continuous-profiler"/>
                                                            <connections>
                                                                <action selector="stopProfile:" target="XfG-lQ-9wD" id="5HW-xf-UT9"/>
...
                                                                <font key="font" metaFont="system"/>
                                                            </buttonCell>
                                                            <accessibility identifier="io.sentry.ui-tests.view-first-continuous-profile-chunk"/>
                                                            <connections>
                                                                <action selector="retrieveProfileChunk:" target="XfG-lQ-9wD" id="EnS-7z-0xG"/>
...
                                                                <font key="font" metaFont="system"/>
                                                            </buttonCell>
                                                            <accessibility identifier="io.sentry.ui-tests.app-launch-profile-marker-file-button"/>
                                                            <connections>
                                                                <action selector="checkProfileMarkerFileExistence:" target="XfG-lQ-9wD" id="Fve-Lw-Dza"/>
...
                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                            </textFieldCell>
                                                            <accessibility identifier="io.sentry.ui-tests.profile-marshaling-text-field"/>
                                                        </textField>
                                                    </subviews>
...
                                        </view>
                                    </tabViewItem>
                                    <tabViewItem label="Metadata" identifier="io.sentry.ios-swift.ui-test.tabs.metadata" id="4zY-Zx-mk7" userLabel="Metadata">
                                        <view key="view" id="3CP-B7-aoz">
                                            <rect key="frame" x="10" y="33" width="597" height="780"/>
...
                                            <font key="font" metaFont="system"/>
                                        </buttonCell>
                                        <accessibility identifier="io.sentry.macos-swift.ui-test.checks.app-sandbox.is-active"/>
                                    </button>
                                </subviews>
...
